--- a/css/main.css
+++ b/css/main.css
@@ -399,4 +399,57 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+.box__img-block {
+  width: 100%;
+  background: #e6e6e6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.box__img-block img {
+  width: 200px;
+  height: 200px;
+}
+
+.box__wrapper {
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 3px 6px #d1d1d1;
+          box-shadow: 0 3px 6px #d1d1d1;
+  cursor: pointer;
+}
+
+.box__wrapper:active {
+  -webkit-box-shadow: 0px 2px 2px #d1d1d1;
+          box-shadow: 0px 2px 2px #d1d1d1;
+}
+
+.box__title {
+  font-size: 30px;
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+
+.box__count {
+  font-size: 25px;
+  color: grey;
+}
 /*# sourceMappingURL=main.css.map */
