--- a/css/main.css
+++ b/css/main.css
@@ -443,9 +443,10 @@ img {
 }
 
 .box__title {
-  font-size: 30px;
+  font-size: 25px;
   text-transform: uppercase;
   margin-top: 20px;
+  font-weight: 500;
 }
 
 .box__count {
