--- a/scss/blocks/_box.scss
+++ b/scss/blocks/_box.scss
@@ -27,9 +27,10 @@
     }
 
     &__title {
-        font-size: 30px;
+        font-size: 25px;
         text-transform: uppercase;
         margin-top: 20px;
+        font-weight: 500;
     }
 
     &__count {
